Add Docker support, JWT auth, and deployment config
- Add Dockerfile with multi-stage build (JDK compile + JRE runtime)
- Add .dockerignore to exclude local files from build context
- Add application-prod.properties with env-var-driven config
- Add JWT auth (JwtAuthFilter, JwtService, SecurityConfig)
- Add AuthController, User model, and AuthService
- Add user repository layer
- Update CORS, Google/Microsoft OAuth, and delegate configs
- Update application.properties for SQLite and mail settings

Co-authored-by: Cursor <cursoragent@cursor.com>